// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Note > renders <MNote>Note slot</MNote> correctly 1`] = `
"<div class="group border relative block rounded-base px-4 py-3 text-sm/6 my-5 dark:border-blue-500/20 dark:bg-blue-800/5 border-blue-500/30 bg-blue-500/10 text-blue-600 transition-colors duration-200 ease-in-out">
  <!--v-if--><span class="iconify i-lucide:info size-4 shrink-0 align-middle mr-1.5 text-blue-600" aria-hidden="true"></span>
  <!--v-if-->Note slot
</div>"
`;

exports[`Note > renders basic case correctly 1`] = `
"<div class="group border relative block rounded-base px-4 py-3 text-sm/6 my-5 dark:border-blue-500/20 dark:bg-blue-800/5 border-blue-500/30 bg-blue-500/10 text-blue-600 transition-colors duration-200 ease-in-out">
  <!--v-if--><span class="iconify i-lucide:info size-4 shrink-0 align-middle mr-1.5 text-blue-600" aria-hidden="true"></span>
  <!--v-if-->
</div>"
`;
